--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,5 @@
-.App {
-  text-align: center;
-  font-family: "Courier New", monospace;
-  width: 100%;
+body {
+  margin: 0;
 }
 
 h1 {
@@ -18,7 +16,7 @@ h1 {
 
 .more {
   font-size: 32px;
-  font-family: "Courier New", monospace;
+  font-family: 'Courier New', monospace;
   border: 2px solid #000;
   background-color: #fff;
   padding: 10px 25px;
